Table creation and entity insertion